<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Product_Information">


  <TextView
      android:id="@+id/productinfo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_marginTop="20dp"
      android:layout_centerHorizontal="true"
      android:text="@string/productinfo"
      android:textSize="35sp"
      android:textColor="@color/green"
      android:fontFamily="@font/akaya_telivigala"/>

  <TextView
      android:id="@+id/name1"
      android:layout_width="172dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/productinfo"
      android:layout_alignParentStart="true"
      android:layout_marginTop="10dp"
      android:text="@string/product_name"

      android:textSize="20sp" />
  <TextView
      android:id="@+id/name"
      android:layout_width="172dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/productinfo"
      android:layout_alignParentEnd="true"
      android:layout_marginTop="10dp"
      android:hint="@string/product_name"
      android:textSize="20sp" />
  <TextView
      android:id="@+id/producer1"
      android:layout_width="172dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/name1"
      android:layout_alignParentStart="true"
      android:layout_marginTop="20dp"
      android:text="@string/producer_name"
      android:textSize="20sp" />
  <TextView
      android:id="@+id/producer"
      android:layout_width="172dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/name"
      android:layout_alignParentEnd="true"
      android:layout_marginTop="20dp"
      android:hint="@string/producer_name"
      android:textSize="20sp" />
  <TextView
      android:id="@+id/category"
      android:layout_width="172dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/producer"
      android:layout_alignParentEnd="true"
      android:layout_marginTop="20dp"
      android:hint="@string/category"
      android:textSize="20sp" />
  <TextView
      android:id="@+id/category1"
      android:layout_width="172dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/producer"
      android:layout_alignParentStart="true"
      android:layout_marginTop="20dp"
      android:text="@string/category"
      android:textSize="20sp" />
  <TextView
      android:id="@+id/component"
      android:layout_width="172dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/category"
      android:layout_alignParentEnd="true"
      android:layout_marginTop="20dp"
      android:hint="@string/component"
      android:textSize="20sp" />
  <TextView
      android:id="@+id/component1"
      android:layout_width="172dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/category"
      android:layout_alignParentStart="true"
      android:layout_marginTop="20dp"
      android:text="@string/component"
      android:textSize="20sp" />
  <TextView
      android:id="@+id/additive"
      android:layout_width="172dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/component"
      android:layout_alignParentEnd="true"
      android:layout_marginTop="20dp"
      android:hint="@string/additive"
      android:textSize="20sp" />
  <TextView
      android:id="@+id/additive1"
      android:layout_width="172dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/component"
      android:layout_alignParentStart="true"
      android:layout_marginTop="20dp"
      android:text="@string/additive"
      android:textSize="20sp" />
  <Button
      android:id="@+id/back"
      android:layout_width="169dp"
      android:layout_height="75dp"
      android:layout_centerHorizontal="true"
      android:layout_alignParentBottom="true"
      android:layout_marginEnd="30dp"
      android:layout_marginBottom="117dp"
      android:backgroundTint="@color/green"
      android:text="@string/back"
      android:textColor="@color/bege"
      android:textSize="20dp" />


</RelativeLayout>