<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText

        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/here"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/enter_barcode"
        android:textColor="#286A4E"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search1"
        android:layout_width="144dp"
        android:layout_height="67dp"
        android:layout_marginTop="148dp"
        android:backgroundTint="#FEA771"
        android:text="@string/search"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_text" />

    <Button
        android:id="@+id/back"
        android:layout_width="144dp"
        android:layout_height="67dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="88dp"
        android:backgroundTint="#286A4E"
        android:text="@string/back"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/search1"
        app:layout_constraintTop_toBottomOf="@+id/search_text" />
</androidx.constraintlayout.widget.ConstraintLayout>