<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".First_Page"
    android:background="@color/bege">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/alfoda"
        android:layout_width="223dp"
        android:layout_height="89dp"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/akaya_telivigala"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/alfoda"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/guide"
        android:textColor="@color/green"
        android:textSize="25sp" />

    <View
        android:id="@+id/view"
        android:layout_width="50dp"
        android:layout_height="8dp"
        android:layout_alignTop="@id/next"
        android:layout_alignParentStart="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="-37dp"
        android:background="@color/green" />

    <View
        android:id="@+id/view1"
        android:layout_width="50dp"
        android:layout_height="8dp"
        android:layout_alignTop="@id/next"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-35dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="170dp"
        android:background="@color/white" />

    <Button
        android:id="@+id/next"
        android:layout_width="270dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="95dp"
        android:backgroundTint="@color/green"
android:layout_centerHorizontal="true"
        android:text="@string/next"
        android:textColor="@color/bege"
        android:textSize="30sp" />

</RelativeLayout>