<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginStart="168dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/topright"

        android:contentDescription="topright" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="172dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/buttumleft" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="359dp"
        android:layout_height="280dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="408dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/weclome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#286A4E"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/scan"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#286A4E"
        android:text="@string/scan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/search"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="#FEA771"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/or"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/search"
        app:layout_constraintStart_toEndOf="@+id/scan"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
         />

    <ImageButton
        android:id="@+id/language"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/language"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"

        />

</androidx.constraintlayout.widget.ConstraintLayout>